.kube/deployment-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lanchonete-deployment
  labels:
    app: lanchonete-soat7
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lanchonete-soat7
  template:
    metadata:
      labels:
        app: lanchonete-soat7
    spec:
      containers:
        - name: lanchonete
          image: lanchonete-soat7:2.0.0
          ports:
            - containerPort: 8080
