.kube/deployment-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deployment
  labels:
    app: postgres-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-db
  template:
    metadata:
      labels:
        app: postgres-db
    spec:
      containers:
        - name: postgres
          image: postgres:12
          ports:
          - containerPort: 5432
          -
            name: POSTGRES_DB
            valueFrom:
              secretKeyRef:
                name: secret-db
                key: db
          -
            name: POSTGRES_USER
            valueFrom:
              secretKeyRef:
                name: secret-db
                key: username
          -
            name: POSTGRES_PASSWORD
            valueFrom:
              secretKeyRef:
                name: secret-db
                key: password
          -
            name: PGDATA
            value: postgres-data
          volumeMounts:
            - mountPath: postgres-data
              name: db
      volumes:
        - name: db
          persistentVolumeClaim:
            claimName: lanchonete-db-pvc
