.kube/service-app.yaml
kind: Service
apiVersion: v1
metadata:
  name: lanchonete-deployment
  namespace: soat7-lanchonete
  labels:
    app: lanchonete-soat7
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 32324
  selector:
    app: lanchonete-soat7
  type: LoadBalancer
  sessionAffinity: None
  externalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  allocateLoadBalancerNodePorts: true
  internalTrafficPolicy: Cluster
