.kube/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    run: postgres-db
spec:
  ports:
    - port: 5432
      protocol: TCP
  selector:
    app: postgres-db
