.kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lanchonete-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: soat7-tech-ch-2.fiap
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lanchonete
                port:
                  number: 8080
